--- a/todo.txt
+++ b/todo.txt
@@ -299,6 +299,10 @@ should the editor keys go in a menubar?
   how else are users supposed to discover these keys?
   could put them in a help menu
 
+editor scale in status bar
+
+ignore the waking click
+
 ------------------------------- minor refactoring ------------------------------
 
 there might be a few random constants that should be in config.hpp but aren't
