--- a/todo.txt
+++ b/todo.txt
@@ -274,6 +274,9 @@ editor scaling is sometimes a pixel off
   this might be due to QPainter using floats
   might have to do scaling myself
 
+remember there's a workaround for a bug in Xcode
+  https://stackoverflow.com/q/60896739/4093378
+
 -------------------------------- minor features --------------------------------
 
 remove layer button appears when hovering layer name
