--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -294,6 +294,8 @@ support unicode characters in layer names
 
 some of the integer's in the sprite format are signed and some are unsigned
   update the documenation (and code perhaps?) accordingly
+  
+if another application edits the sprite file, ask to reload
 
 ------------------------------- minor refactoring ------------------------------
 
